[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "session-anchor"
version = "0.1.0"
description = "Temporal context grounding for LLM sessions — prevents stale time assumptions across conversation gaps."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
keywords = ["llm", "rag", "context", "session", "temporal", "grounding", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []   # Zero mandatory dependencies — pure stdlib

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.25"]
langchain  = ["langchain-core>=0.2"]
redis      = ["redis>=5.0"]
dev        = ["pytest>=8.0", "pytest-cov", "black", "ruff", "mypy"]

[project.urls]
Homepage   = "https://github.com/yourusername/session-anchor"
Repository = "https://github.com/yourusername/session-anchor"
Issues     = "https://github.com/yourusername/session-anchor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["session_anchor*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
